# pos.pos-ui-app

./: .gitignore  README.md  gen-tag.sh  package.json
.githooks/: post-commit
.github/workflows/: tauri-build.yml
scripts/: generate-tag.sh
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.macOS.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bluetooth.rs  device_auth.rs  lib.rs  main.rs  printer.rs
