[package]
name = "pos-ui-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pos_ui_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_Security"] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
btleplug = "0.11"
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.19"

