[package]
name = "indyzai-pos-app"
version = "0.1.0"
description = "IndyzAI POS — Tauri Desktop/Mobile App"
authors = ["IndyzAI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "indyzai_pos_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# OS keychain access (macOS Keychain, Windows Credential Manager, Linux libsecret)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_Security"] }
btleplug = "0.11"
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.19"
